Segundo commit del proyecto